show card buttons

--- a/guestPages/homepage.html
+++ b/guestPages/homepage.html
@@ -5654,7 +5654,7 @@
                                                                                     class="m1tlldn6 dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         data-is-hidden="true"
@@ -5696,7 +5696,7 @@
                                                                                     class="ms83rji dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         aria-hidden="false"
@@ -6396,7 +6396,7 @@
                                                                                     class="m1tlldn6 dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         data-is-hidden="true"
@@ -6438,7 +6438,7 @@
                                                                                     class="ms83rji dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         aria-hidden="false"
@@ -7139,7 +7139,7 @@
                                                                                     class="m1tlldn6 dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         data-is-hidden="true"
@@ -7181,7 +7181,7 @@
                                                                                     class="ms83rji dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         aria-hidden="false"
@@ -7881,7 +7881,7 @@
                                                                                     class="m1tlldn6 dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         data-is-hidden="true"
@@ -7923,7 +7923,7 @@
                                                                                     class="ms83rji dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         aria-hidden="false"
@@ -8624,7 +8624,7 @@
                                                                                     class="m1tlldn6 dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         data-is-hidden="true"
@@ -8666,7 +8666,7 @@
                                                                                     class="ms83rji dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         aria-hidden="false"
@@ -9314,7 +9314,7 @@
                                                                                     class="m1tlldn6 dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         data-is-hidden="true"
@@ -9356,7 +9356,7 @@
                                                                                     class="ms83rji dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         aria-hidden="false"
@@ -10004,7 +10004,7 @@
                                                                                     class="m1tlldn6 dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         data-is-hidden="true"
@@ -10046,7 +10046,7 @@
                                                                                     class="ms83rji dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         aria-hidden="false"
@@ -10696,7 +10696,7 @@
                                                                                     class="m1tlldn6 dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         data-is-hidden="true"
@@ -10738,7 +10738,7 @@
                                                                                     class="ms83rji dir dir-ltr"
                                                                                   >
                                                                                     <div
-                                                                                      class="s134m7bb s1tdgjmu dir dir-ltr"
+                                                                                      class="s134m7bb swcqrz4 dir dir-ltr"
                                                                                     >
                                                                                       <button
                                                                                         aria-hidden="false"
