remove cards-wrapper margin on sm

--- a/guestPages/homepage.html
+++ b/guestPages/homepage.html
@@ -5481,11 +5481,11 @@
                                     <div style="--gp-section-max-width: 1600px">
                                       <div
                                         style="
-                                          margin-top: 16px;
                                           --gp-section-top-margin: 16;
                                           margin-bottom: 40px;
                                           --gp-section-bottom-margin: 40;
                                         "
+                                        class="cards-wrapper"
                                       >
                                         <div class="_le6wlg">
                                           <div
