add reviews full

--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -1116,6 +1116,223 @@
                     </div>
                   </section>
                   <!-- /3rd page -->
+                  <!-- 4th page -->
+                  <section class="d-none">
+                    <div class="_1pb0poc">
+                      <div class="_1byskwn">
+                        <div class="_15d5qr9n">
+                          <div class="_1nu4ve4">
+                            <div class="_ihd0yx">
+                              <div class="_fkfey3">
+                                <section>
+                                  <h1
+                                    tabindex="-1"
+                                    class="_14i3z6h"
+                                    elementtiming="LCP-target"
+                                  >
+                                    <div class="_5nym0h">
+                                      Is there anything that could’ve been
+                                      better?
+                                    </div>
+                                  </h1>
+                                  <div class="_4egw05">
+                                    Jose Angelo uses these answers to make their
+                                    experience better.
+                                  </div>
+                                </section>
+                              </div>
+                              <div class="_1fopc40">
+                                <span class="a8jt5op dir dir-ltr"
+                                  >What could have been better?</span
+                                >
+                                <div
+                                  class="dir dir-ltr"
+                                  role="group"
+                                  id="improvement_tags_toggle_button_row"
+                                  aria-labelledby="chipGroupLabel"
+                                >
+                                  <div
+                                    class="dir dir-ltr"
+                                    id="improvement_tags_toggle_button_row-DLS-chipGroup-label"
+                                  >
+                                    <span
+                                      class="a8jt5op dir dir-ltr"
+                                      id="chipGroupLabel"
+                                      aria-hidden="true"
+                                      >What could have been better?</span
+                                    >
+                                  </div>
+                                  <div class="_1536r8x">
+                                    <div class="_4fwio0">
+                                      <button
+                                        id="getting_set_up_improvement_tag"
+                                        name="getting_set_up_improvement_tag"
+                                        class="_1h0bjrrv"
+                                        aria-pressed="false"
+                                        type="button"
+                                      >
+                                        Getting set up<span
+                                          aria-hidden="true"
+                                          class="_1vwho579"
+                                          >Getting set up</span
+                                        >
+                                      </button>
+                                    </div>
+                                    <div class="_4fwio0">
+                                      <button
+                                        id="audio_or_video_improvement_tag"
+                                        name="audio_or_video_improvement_tag"
+                                        class="_np90lm"
+                                        aria-pressed="false"
+                                        type="button"
+                                      >
+                                        Audio or video quality<span
+                                          aria-hidden="true"
+                                          class="_1vwho579"
+                                          >Audio or video quality</span
+                                        >
+                                      </button>
+                                    </div>
+                                    <div class="_4fwio0">
+                                      <button
+                                        id="accuracy_improvement_tag"
+                                        name="accuracy_improvement_tag"
+                                        class="_np90lm"
+                                        aria-pressed="false"
+                                        type="button"
+                                      >
+                                        Accuracy or expectations<span
+                                          aria-hidden="true"
+                                          class="_1vwho579"
+                                          >Accuracy or expectations</span
+                                        >
+                                      </button>
+                                    </div>
+                                    <div class="_4fwio0">
+                                      <button
+                                        id="structure_or_style_improvement_tag"
+                                        name="structure_or_style_improvement_tag"
+                                        class="_np90lm"
+                                        aria-pressed="false"
+                                        type="button"
+                                      >
+                                        Structure or style<span
+                                          aria-hidden="true"
+                                          class="_1vwho579"
+                                          >Structure or style</span
+                                        >
+                                      </button>
+                                    </div>
+                                    <div class="_4fwio0">
+                                      <button
+                                        id="price_or_value_improvement_tag"
+                                        name="price_or_value_improvement_tag"
+                                        class="_np90lm"
+                                        aria-pressed="false"
+                                        type="button"
+                                      >
+                                        Price or value<span
+                                          aria-hidden="true"
+                                          class="_1vwho579"
+                                          >Price or value</span
+                                        >
+                                      </button>
+                                    </div>
+                                    <div class="_4fwio0">
+                                      <button
+                                        id="something_else_improvement_tag"
+                                        name="something_else_improvement_tag"
+                                        class="_np90lm"
+                                        aria-pressed="false"
+                                        type="button"
+                                      >
+                                        Something else<span
+                                          aria-hidden="true"
+                                          class="_1vwho579"
+                                          >Something else</span
+                                        >
+                                      </button>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </section>
+                  <!-- /4th page -->
+                  <!-- 5th page -->
+                  <section class="d-none">
+                    <div class="_1pb0poc">
+                      <div class="_1byskwn">
+                        <div class="_15d5qr9n">
+                          <div class="_1nu4ve4">
+                            <div class="_ihd0yx">
+                              <div class="_fkfey3">
+                                <section>
+                                  <h1
+                                    tabindex="-1"
+                                    class="_14i3z6h"
+                                    elementtiming="LCP-target"
+                                  >
+                                    <div class="_5nym0h">
+                                      Last step. Write a review for this
+                                      experience
+                                    </div>
+                                  </h1>
+                                </section>
+                              </div>
+                              <div class="_15ee0ob">
+                                <label for="public_review_input"
+                                  ><div class="_1wgf3yo">
+                                    Write a public review for future guests
+                                  </div>
+                                  <div class="_4l12l8">
+                                    <div class="_1aoj0ap">
+                                      <div dir="ltr">
+                                        <textarea
+                                          aria-label="Write a public review for future guests"
+                                          name="public_review_input"
+                                          rows="2"
+                                          class="_159914b"
+                                          autocomplete="off"
+                                          id="public_review_input"
+                                          placeholder="Start writing here…"
+                                        ></textarea>
+                                      </div>
+                                    </div></div
+                                ></label>
+                              </div>
+                              <div class="_15ee0ob">
+                                <label for="private_review_input"
+                                  ><div class="_1wgf3yo">
+                                    Write a private note to Jose Angelo
+                                  </div>
+                                  <div class="_4l12l8">
+                                    <div class="_1aoj0ap">
+                                      <div dir="ltr">
+                                        <textarea
+                                          aria-label="Start writing here…"
+                                          name="private_review_input"
+                                          rows="2"
+                                          class="_159914b"
+                                          autocomplete="off"
+                                          id="private_review_input"
+                                          placeholder="Start writing here…"
+                                        ></textarea>
+                                      </div>
+                                    </div></div
+                                ></label>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </section>
+                  <!-- /5th page -->
                   <div class="_107yoem">
                     <div class="_1adtjk3">
                       <div
