--- a/starter.html
+++ b/starter.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/utilities.css" />
     <!-- <link rel="stylesheet" href="css/htmlfilenamehere.css"> -->
     <link rel="stylesheet" href="../css/layouts.css" />
-    <title>Account Settings - Airbnb</title>
+    <!-- <title>page title here</title> -->
   </head>
   <body class="with-new-header">
     <div id="site-skip-links">
