fix tax-info title

--- a/pages/payments/tax-info.html
+++ b/pages/payments/tax-info.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../css/utilities.css" />
     <link rel="stylesheet" href="css/payments.css" />
     <link rel="stylesheet" href="../../css/layouts.css" />
-    <title>Manage your payout methods - Airbnb</title>
+    <title>Manage your taxpayer info - Airbnb</title>
   </head>
   <body class="with-new-header">
     <div id="site-skip-links">
