fix wishlist css

--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -4936,7 +4936,7 @@
                                   height: 100%;
                                 "
                               >
-                                <img src="images/map-wishlist.png" alt="" class='mw-100'>
+                                <img src="images/map-wishlist.png" alt="" class='w-100'>
                               </div>
                       </section>
                     </main>
