--- a/pages/login-security.html
+++ b/pages/login-security.html
@@ -2315,6 +2315,7 @@
       </div>
     </div>
     <!-- /Desktop -->
+    <script src="js/tabs.js" defer></script>
     <script src="js/login-security.js" defer></script>
   </body>
 </html>
