rename login-security -> account-notifications

--- a/pages/account-notifications.html
+++ b/pages/account-notifications.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/utilities.css" />
-    <link rel="stylesheet" href="css/login-security.css" />
+    <link rel="stylesheet" href="css/account-notifications.css" />
     <link rel="stylesheet" href="../css/layouts.css" />
     <title>Notifications - Account Settings - Airbnb</title>
   </head>
@@ -2316,6 +2316,6 @@
     </div>
     <!-- /Desktop -->
     <script src="js/tabs.js" defer></script>
-    <script src="js/login-security.js" defer></script>
+    <script src="js/account-notifications.js" defer></script>
   </body>
 </html>
