add edit modal, unsubscribe modal in account-notifications. extract modal styles to components.css and js

--- a/pages/personal-info.html
+++ b/pages/personal-info.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/utilities.css" />
     <link rel="stylesheet" href="css/personal-info.css" />
     <link rel="stylesheet" href="../css/layouts.css" />
+    <link rel="stylesheet" href="../css/components.css" />
     <title>Personal Information - Account Settings - Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -8523,6 +8524,7 @@
     </div>
     <!-- /Goverment ID remove modal -->
 
+    <script src="js/components.js" defer></script>
     <script src="js/personal-info.js" defer></script>
   </body>
 </html>
