--- a/pages/privacy-and-sharing.html
+++ b/pages/privacy-and-sharing.html
@@ -1987,7 +1987,7 @@
       </div>
     </div>
 
-    <script src="js/tabs.js" defer></script>
+    <script src="js/components.js" defer></script>
     <script src="js/privacy-and-sharing.js" defer></script>
   </body>
 </html>
