--- a/pages/account-notifications.html
+++ b/pages/account-notifications.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/utilities.css" />
     <link rel="stylesheet" href="css/account-notifications.css" />
     <link rel="stylesheet" href="../css/layouts.css" />
+    <link rel="stylesheet" href="../css/components.css" />
     <title>Notifications - Account Settings - Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -35,7 +36,6 @@
       aria-live="assertive"
     ></div>
     <div id="education-overlay-root"></div>
-    <!-- Mobile -->
     <div data-application="true" class="d-md-none">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
@@ -905,8 +905,6 @@
         </div>
       </div>
     </div>
-    <!-- /Mobile -->
-    <!-- Desktop -->
     <div data-application="true" class="d-none d-md-block">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
@@ -2314,8 +2312,306 @@
         </div>
       </div>
     </div>
-    <!-- /Desktop -->
-    <script src="js/tabs.js" defer></script>
+
+    <!-- Edit Modal -->
+    <div dir="ltr" class="d-none" id="edit-modal">
+      <div class="_1t0jy5tw"></div>
+      <section>
+        <div class="_vxvq8x" data-testid="modal-container">
+          <div class="_z4lmgp">
+            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+            <div class="_z4lmgp">
+              <div
+                role="dialog"
+                aria-label="Recognition and achievements"
+                aria-modal="true"
+                class="_1pusc02v"
+                style="position: relative"
+              >
+                <div class="_pa35zs">
+                  <button aria-label="Close" type="button" class="_oda838">
+                    <span class="_e296pg"
+                      ><svg
+                        viewBox="0 0 32 32"
+                        xmlns="http://www.w3.org/2000/svg"
+                        aria-hidden="true"
+                        role="presentation"
+                        focusable="false"
+                        style="
+                          display: block;
+                          fill: none;
+                          height: 16px;
+                          width: 16px;
+                          stroke: currentcolor;
+                          stroke-width: 3;
+                          overflow: visible;
+                        "
+                      >
+                        <path d="m6 6 20 20"></path>
+                        <path d="m26 6-20 20"></path></svg
+                    ></span>
+                  </button>
+                </div>
+                <header class="_1b0cy6g">
+                  <div class="_1tng6ym"></div>
+                  <div class="_9t7ktw"></div>
+                  <div class="_rrmdgl"></div>
+                </header>
+                <div class="_12kfhdn" data-testid="channel-optout-modal">
+                  <section>
+                    <div class="_wz0eg0">
+                      <h2
+                        tabindex="-1"
+                        class="_14i3z6h"
+                        elementtiming="LCP-target"
+                      >
+                        Recognition and achievements
+                      </h2>
+                    </div>
+                    <div class="_ebqknn">
+                      Get recognized for reaching hosting milestones and
+                      Superhost status.
+                    </div>
+                  </section>
+                  <div class="_e296pg">
+                    <div
+                      id="HOST_RECOGNITION_ACHIEVEMENTSEMAIL"
+                      aria-disabled="false"
+                      role="group"
+                      aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-title"
+                      class="rcem0st dir dir-ltr"
+                    >
+                      <div class="_jro6t0">
+                        <div class="_gfomxi">
+                          <div
+                            id="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-title"
+                            class="_gw4xx4"
+                          >
+                            Email
+                          </div>
+                        </div>
+                        <div class="_1mqc21n">
+                          <button
+                            aria-checked="true"
+                            aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-title"
+                            aria-describedby="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-subtitle"
+                            role="switch"
+                            type="button"
+                            class="_1x8lx0do"
+                          >
+                            <div class="_16g1cyy8">
+                              <svg
+                                viewBox="0 0 32 32"
+                                xmlns="http://www.w3.org/2000/svg"
+                                aria-hidden="true"
+                                role="presentation"
+                                focusable="false"
+                                style="
+                                  display: block;
+                                  fill: none;
+                                  height: 12px;
+                                  width: 12px;
+                                  stroke: currentcolor;
+                                  stroke-width: 5.33333;
+                                  overflow: visible;
+                                "
+                              >
+                                <path fill="none" d="m4 16.5 8 8 16-16"></path>
+                              </svg>
+                            </div>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <div
+                      id="HOST_RECOGNITION_ACHIEVEMENTSSMS"
+                      aria-disabled="false"
+                      role="group"
+                      aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-title"
+                      class="rcem0st dir dir-ltr"
+                    >
+                      <div class="_jro6t0">
+                        <div class="_gfomxi">
+                          <div
+                            id="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-title"
+                            class="_gw4xx4"
+                          >
+                            SMS
+                          </div>
+                        </div>
+                        <div class="_1mqc21n">
+                          <button
+                            aria-checked="false"
+                            aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-title"
+                            aria-describedby="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-subtitle"
+                            role="switch"
+                            type="button"
+                            class="_1hzx1vsg"
+                          >
+                            <div class="_vr1ztso"></div>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <div
+                      id="HOST_RECOGNITION_ACHIEVEMENTSVOICE"
+                      aria-disabled="false"
+                      role="group"
+                      aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-title"
+                      class="rcem0st dir dir-ltr"
+                    >
+                      <div class="_jro6t0">
+                        <div class="_gfomxi">
+                          <div
+                            id="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-title"
+                            class="_gw4xx4"
+                          >
+                            Phone calls
+                          </div>
+                        </div>
+                        <div class="_1mqc21n">
+                          <button
+                            aria-checked="false"
+                            aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-title"
+                            aria-describedby="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-subtitle"
+                            role="switch"
+                            type="button"
+                            class="_1hzx1vsg"
+                          >
+                            <div class="_vr1ztso"></div>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <div
+                      id="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH"
+                      aria-disabled="false"
+                      role="group"
+                      aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-title"
+                      class="rcem0st dir dir-ltr"
+                    >
+                      <div class="_jro6t0">
+                        <div class="_gfomxi">
+                          <div
+                            id="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-title"
+                            class="_gw4xx4"
+                          >
+                            Browser notifications
+                          </div>
+                        </div>
+                        <div class="_1mqc21n">
+                          <button
+                            aria-checked="false"
+                            aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-title"
+                            aria-describedby="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-subtitle"
+                            role="switch"
+                            type="button"
+                            class="_1hzx1vsg"
+                          >
+                            <div class="_vr1ztso"></div>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+          </div>
+        </div>
+      </section>
+      <div class="_b21f4g">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+    <!-- /Edit Modal -->
+
+    <!-- Unsubscribe Modal -->
+    <div dir="ltr" class="d-none" id="unsubscribe-modal">
+      <div class="_1t0jy5tw"></div>
+      <section>
+        <div class="_vxvq8x" data-testid="modal-container">
+          <div class="_z4lmgp">
+            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+            <div class="_z4lmgp">
+              <div
+                role="dialog"
+                aria-label="Are you sure?"
+                aria-modal="true"
+                class="_1ucy1zjv"
+                style="position: relative"
+              >
+                <div class="_pa35zs">
+                  <button aria-label="Close" type="button" class="_oda838">
+                    <span class="_e296pg"
+                      ><svg
+                        viewBox="0 0 32 32"
+                        xmlns="http://www.w3.org/2000/svg"
+                        aria-hidden="true"
+                        role="presentation"
+                        focusable="false"
+                        style="
+                          display: block;
+                          fill: none;
+                          height: 16px;
+                          width: 16px;
+                          stroke: currentcolor;
+                          stroke-width: 3;
+                          overflow: visible;
+                        "
+                      >
+                        <path d="m6 6 20 20"></path>
+                        <path d="m26 6-20 20"></path></svg
+                    ></span>
+                  </button>
+                </div>
+                <header class="_1youxq0">
+                  <div class="_1tng6ym"></div>
+                  <div class="_9t7ktw">
+                    <h1
+                      tabindex="-1"
+                      class="_14i3z6h"
+                      elementtiming="LCP-target"
+                    >
+                      <div class="_1q9sh65">Are you sure?</div>
+                    </h1>
+                  </div>
+                  <div class="_rrmdgl"></div>
+                </header>
+                <div class="_12kfhdn">
+                  You’ll be unsubscribing from all marketing emails from Airbnb.
+                  This includes recommendations, travel inspiration and deals,
+                  things to do in your home city, how Airbnb works, invites and
+                  referrals, surveys and research studies, airbnb for work
+                  updates, home hosting tips and promotions and experience
+                  hosting tips and promotions.
+                </div>
+                <footer class="_zgc1p6">
+                  <button type="button" class="_za4ekfm">Cancel</button
+                  ><button
+                    data-testid="email-optout-confirm-button"
+                    type="button"
+                    class="_1ku51f04"
+                  >
+                    Unsubscribe
+                  </button>
+                </footer>
+              </div>
+            </div>
+            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+          </div>
+        </div>
+      </section>
+      <div class="_b21f4g">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+    <!-- /Unsubscribe Modal -->
+
+    <script src="js/components.js" defer></script>
     <script src="js/account-notifications.js" defer></script>
   </body>
 </html>
