add switch off in privacy-and-sharing

--- a/pages/privacy-and-sharing.html
+++ b/pages/privacy-and-sharing.html
@@ -545,43 +545,21 @@
                                                       </div>
                                                       <div class="_1vk19cb">
                                                         <button
-                                                          aria-checked="true"
+                                                          aria-checked="false"
                                                           aria-labelledby="includeInSearchEngines-switch-row-title"
                                                           aria-describedby="includeInSearchEngines-switch-row-subtitle"
                                                           role="switch"
                                                           type="button"
-                                                          class="_1x8lx0do"
+                                                          class="_1hzx1vsg"
                                                         >
                                                           <input
                                                             type="hidden"
                                                             name="includeInSearchEngines-switch"
-                                                            value="true"
+                                                            value="false"
                                                           />
                                                           <div
-                                                            class="_16g1cyy8"
-                                                          >
-                                                            <svg
-                                                              viewBox="0 0 32 32"
-                                                              xmlns="http://www.w3.org/2000/svg"
-                                                              aria-hidden="true"
-                                                              role="presentation"
-                                                              focusable="false"
-                                                              style="
-                                                                display: block;
-                                                                fill: none;
-                                                                height: 12px;
-                                                                width: 12px;
-                                                                stroke: currentcolor;
-                                                                stroke-width: 5.33333;
-                                                                overflow: visible;
-                                                              "
-                                                            >
-                                                              <path
-                                                                fill="none"
-                                                                d="m4 16.5 8 8 16-16"
-                                                              ></path>
-                                                            </svg>
-                                                          </div>
+                                                            class="_vr1ztso"
+                                                          ></div>
                                                         </button>
                                                       </div>
                                                     </div>
@@ -1229,41 +1207,19 @@
                                               </div>
                                               <div class="_1vk19cb">
                                                 <button
-                                                  aria-checked="true"
+                                                  aria-checked="false"
                                                   aria-labelledby="includeInSearchEngines-switch-row-title"
                                                   aria-describedby="includeInSearchEngines-switch-row-subtitle"
                                                   role="switch"
                                                   type="button"
-                                                  class="_1x8lx0do"
+                                                  class="_1hzx1vsg"
                                                 >
                                                   <input
                                                     type="hidden"
                                                     name="includeInSearchEngines-switch"
-                                                    value="true"
+                                                    value="false"
                                                   />
-                                                  <div class="_16g1cyy8">
-                                                    <svg
-                                                      viewBox="0 0 32 32"
-                                                      xmlns="http://www.w3.org/2000/svg"
-                                                      aria-hidden="true"
-                                                      role="presentation"
-                                                      focusable="false"
-                                                      style="
-                                                        display: block;
-                                                        fill: none;
-                                                        height: 12px;
-                                                        width: 12px;
-                                                        stroke: currentcolor;
-                                                        stroke-width: 5.33333;
-                                                        overflow: visible;
-                                                      "
-                                                    >
-                                                      <path
-                                                        fill="none"
-                                                        d="m4 16.5 8 8 16-16"
-                                                      ></path>
-                                                    </svg>
-                                                  </div>
+                                                  <div class="_vr1ztso"></div>
                                                 </button>
                                               </div>
                                             </div>
